--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/7.recover-the-standby-tenant.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/7.recover-the-standby-tenant.md
@@ -18,13 +18,13 @@
 
    语句如下：
 
-   * 回放到日志到指定的时间戳，且包含该时间戳位点。
+   * 回放日志到指定的时间戳，且包含该时间戳位点。
 
      ```shell
      obclient [(none)]> ALTER SYSTEM RECOVER STANDBY TENANT tenant_name UNTIL TIME='timestamp';
      ```
 
-   * 回放到日志到指定的 scn，且包含该 scn 位点。
+   * 回放日志到指定的 scn，且包含该 scn 位点。
 
      ```shell
      obclient [(none)]> ALTER SYSTEM RECOVER STANDBY TENANT tenant_name UNTIL SCN=scn;
